ie fix implemented with no grid gaps
Former-commit-id: be27b6b3b843ec8c99547205f5a3c1a3d7e086ec

--- a/styles/templates/_home.scss
+++ b/styles/templates/_home.scss
@@ -1,7 +1,12 @@
 // Homepage template/layout
 
 .home {
+  // sass-lint:disable no-vendor-prefixes
+  display: -ms-grid;
+  // sass-lint:disable no-duplicate-properties
   display: grid;
+
+
   grid-template-areas:
   'top'
   'first'
@@ -17,6 +22,7 @@
   }
 
   @include media($media-small-tablet) {
+    -ms-grid-columns: 1fr 180px;
     grid-template-columns: 1fr 180px;
     grid-template-areas:
     'top top'
@@ -28,6 +34,7 @@
   }
 
   @include media($media-tablet) {
+    -ms-grid-columns: 1fr 300px;
     grid-template-columns: 1fr 300px;
     grid-template-areas:
     'top top'
@@ -38,6 +45,7 @@
   }
 
   @include media($media-desktop) {
+    -ms-grid-columns: 210px 1fr 300px;
     grid-template-columns: 210px 1fr 300px;
     grid-template-areas:
     'top top sidebar'
@@ -82,11 +90,34 @@
 
 .home_top {
   grid-area: top;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+
+  @include media($media-small-tablet) {
+
+  }
+
+  @include media($media-desktop) {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    -ms-grid-column: 1;
+  }
 }
 
 .home_first {
   grid-area: first;
   margin-bottom: 0;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+
+  @include media($media-small-tablet) {
+
+  }
+
+  @include media($media-desktop) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
 
   &::after {
     content: '';
@@ -96,10 +127,26 @@
     margin: 3rem auto;
     background: $color-blue-tint;
   }
+
+  @include media($media-small-tablet) {
+
+  }
 }
 
 .home_rail {
   grid-area: rail;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+
+  @include media($media-small-tablet) {
+
+  }
+
+  @include media($media-desktop) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
 }
 
 .home_railLinks {
@@ -130,6 +177,17 @@
 
 .home_main {
   grid-area: main;
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+
+  @include media($media-small-tablet) {
+
+  }
+
+  @include media($media-desktop) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+  }
 }
 
 .home_more {
@@ -137,9 +195,19 @@
 }
 
 .home_sidebar {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
   grid-area: sidebar;
+
+  @include media($media-desktop) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+  }
 }
 
 .home_footer {
+  -ms-grid-row: 6;
+  -ms-grid-column: 1;
   grid-area: footer;
 }
